# BlueEngineForPC

./: CMakeLists.txt  README.md
.github/workflows/: build.yaml  cmake-single-platform.yml
kernel/: boot.asm  config_reader.c  elf_loader.c  exe_loader.c  kernel.c  process_manager.c
sysroot/data/config/: system.cfg
sysroot/system/: setupwizard.c
